@@ -1,0 +1,15 @@
+// Copyright 2002-2011, University of Colorado
+package edu.colorado.phet.sugarandsaltsolutions.micro.model;
+
+import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
+
+/**
+ * This code helps keep the nitrate together when the NaNO3 crystal dissolves
+ *
+ * @author Sam Reid
+ */
+public class NitrateCrystal extends Crystal {
+    public NitrateCrystal( ImmutableVector2D position, double sizeScale ) {
+        super( position, sizeScale );
+    }
+}
